--- a/part1/Dockerfile
+++ b/part1/Dockerfile
@@ -5,17 +5,16 @@ FROM python:3.6-slim
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . /app
+ADD . /app
 
-RUN apt-get update
-RUN apt-get install mysql-server -y
-
-RUN pip install -r requirements.txt
-
-RUN mysql -u root -p pass < db_setup.sql
+# Install any needed packages specified in requirements.txt
+RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Make port 80 available to the world outside this container
 EXPOSE 80
 
+# Define environment variable
+ENV NAME World
+
 # Run app.py when the container launches
-CMD ["python", "main.py"]
+CMD ["python", "app.py"]
