--- a/part2/docker-compose.yml
+++ b/part2/docker-compose.yml
@@ -1,62 +1,51 @@
 version: '3'
 services:
-    web:
-        image: inovizz/gdg-demo:part1
-        deploy:
-          restart_policy:
-              condition: on-failure
+    flask:
+        image: flask_service
+        restart: on-failure
+        depends_on:
+            - redis
         ports:
-            - "9090:80"
-        networks:
-            - webnet
-    demo3:
-        build: ./demo3
+            - "9090:3010"
+
+    django:
+        image: django_service
         volumes:
-            - ./django_app:/usr/src/app
+            - ./web1:/usr/src/app
         depends_on:
             - redis
             - postgres
         ports:
             - "8888:8000"
-        command: gunicorn django_app.wsgi -b 0.0.0.0:8000
 
     postgres:
-        build: ./postgres
+        image: postgres_service
         restart: unless-stopped
         expose:
             - "5432"
-        environment:   # will be used by the init script
-            LC_ALL: C.UTF-8
-            POSTGRES_USER: devopspy
-            POSTGRES_PASSWORD: devopspy
-            POSTGRES_DB: devopspy
+        environment:
+            POSTGRES_USER: dev
+            POSTGRES_PASSWORD: pass
+            POSTGRES_DB: pg_db
         volumes:
-            - pgdata:/var/lib/postgresql/data/  # persist container's db data to local pgdata/ (mounted)
-
+            - pgdata:/var/lib/postgresql/data/
+            
     redis:
-        image: sickp/alpine-redis:3.2.2
-        expose:
-            - "6379"
+        image: redis
+        ports:
+            - "6379:6379"
         volumes:
             - redisdata:/data
-        deploy:
-            replicas: 2
-            update_config:
-                parallelism: 2
-                delay: 10s
-            restart_policy:
-                condition: on-failure
+        command: redis-server
 
     nginx:
-        restart: always
-        build: ./nginx/
+        image: nginx_service
+        restart: on-failure
         ports:
             - "8000:80"
         links:
-            - demo3
+            - flask
 
 volumes:
   pgdata:
   redisdata:
-networks:
-  webnet:
